[tool.poetry]
name = "py-lru-cache"
version = "0.1.0"
description = "Simple thread-safe caching decorator in Python"
authors = ["Mikhail Masyagin <masyagin1998@yandex.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
